RDF constraints classification

--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -511,9 +511,9 @@ The difference between $\mathcal{SL}_{1}$ and $\mathcal{SL}_{2}$ constraints is 
 whereas $\mathcal{SL}_{1}$ invalid data cannot be processed further. 
 Although, we provide default severity levels for each constraint, users should be able to specify constraints' severity levels according to their individual needs, i.e., use case specific severity levels.
 
-We recently published a technical report\footnote{\textcolor{red}{\label{technical-report-1}Available at: \url{http://arxiv.org/abs/XXXXX}}} (serving as first appendix of this paper) in which we describe and classify constraints to validate rectangular data and metadata on person-level data sets, aggregated data sets, thesauri, and statistical classifications and therefore apply the proposed classification system \cite{BoschZapilkoWackerowEckert2015}.
-In this section, we describe constraint types and constraints which are important to ensure (meta)data  quality on different aggregation levels. 
-Furthermore, we associate constraints with default severity levels and assign them to validation types. 
+We recently published a technical report\footnote{\textcolor{red}{\label{technical-report-1}Available at: \url{http://arxiv.org/abs/XXXXX}}} (serving as first appendix of this paper) in which we describe 212 constraints (classified as 53 constraint types) to validate rectangular data (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), thesauri (\emph{SKOS}), and statistical classifications (\emph{XKOS}), and therefore apply the proposed classification system to several vocabularies to represent both data and metadata \cite{BoschZapilkoWackerowEckert2015}.
+In this section, we describe constraints, which are important to ensure \emph{SBE} (meta)data quality, 
+associate them with default severity levels, and assign them to $\mathcal{CT}_{C}$ and $\mathcal{CT}_{T}$ constraint types. 
 
 %
 %- different sets of constraints for different use cases / use case specific constraints
